--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/kardeiz/bb8-tiberius"
 keywords = ["mssql", "tiberius", "database", "pool"]
 
 [dependencies]
-tiberius = { version = "0.12", default-features = false }
+tiberius = { git = "https://github.com/GyrusSolutions/tiberius.git", default-features = false }
 bb8 = "0.8"
 thiserror = "1.0.23"
 tokio = { version = "1.1.0", features = ["net"], optional = true }
